--- a/web/src/styles/pages/orphs.css
+++ b/web/src/styles/pages/orphs.css
@@ -5,6 +5,40 @@
   position: relative;
 }
 
+.map-popup .leaflet-popup-conent-wrapper {
+  background-color: rgba(255, 255, 255, 0.8);
+  border-radius: 20px;
+
+}
+
+.map-popup .leaflet-popup-content {
+  color: #0089a5;
+  font-size: 20px;
+  font-weight: bold;
+  margin: 8px 12px;
+
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+
+}
+
+.map-popup .leaflet-popup-content a {
+  width: 40px;
+  height: 40px;
+  background-color: #15c3d6;
+  border-radius: 12px;
+  box-shadow: 17.2868px 27.6589px 41.4884px rgba(23, 142, 166, 0.16);
+
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.map-popup .leaflet-popup-tip-container {
+  display: none;
+}
+
 aside {
   width: 440px;
   background: linear-gradient(329.54deg, #29b6d1 0%, #00c7c7 100%);
